Fix document download and application tracking with RLS bypass
- Add API endpoints to bypass RLS for application CRUD operations
- Fix document download authentication for session-based users
- Update dashboard to use API endpoints instead of direct queries
- Add debugging logs for application stats
- Fix application creation after document generation
- Update button text to show 'Regenerate' when documents exist

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "zod": "^3.25.21"
   },
   "devDependencies": {
+    "@modelcontextprotocol/server-puppeteer": "^2025.5.12",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
     "@types/react": "^18",
